# password_manager_cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
