[package]
name = "pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2.0"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
aes-gcm = "0.10.1"
rand = { version = "0.8.5", features = ["std"] }
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
